fix overflow on contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ div {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 75%;
+  width: 65%;
 }
 
 .facilities {
